# cardseed

./: Cargo.toml  README.md
src/: card.rs  deck.rs  errors.rs  lib.rs  suit.rs
