[package]
name = "cardseed"
version = "0.0.1"
edition = "2021"
authors = ["conduition@proton.me"]
description = "Pseudo-random numbers derived from playing cards using PBKDF2."
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/conduition/cardseed"
documentation = "https://docs.rs/cardseed/latest/cardseed"
keywords = ["playing", "cards", "entropy", "rng", "derive"]

[dependencies]
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.7"
